refactor: migrate Ollama integrations to Spring AI framework and enforce clean architecture for configurations